tests/incremental_eval_diff/incremental_eval_diff.exp
No errors!
Error -------------------------------------------------------------------------------------------------------- a.js:8:17

null or undefined [1] is not an object. [incompatible-use]

   a.js:8:17
   8| export type A = $Values<T>;
                      ^^^^^^^^^^

References:
   a.js:8:25
   8| export type A = $Values<T>;
                              ^ [1]



Found 1 error
